2002-11-23  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::ErrorList): Rename to MessageList
	since it's not specifically intended for errors.  Use MI to combine
	Util::SharedObject and std::list<> instead of making the std::list
	a data member.  IS-A really makes sense here and this kind of class
	enhancement is what MI exists for, after all.

2002-11-22  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (DEFS): Don't use backslash quoting inside the
	double-quoted string.  Rather, quote the outer pair of double-
	quotes with backslashes.  I reckon it's more portable not to use
	backslash quoting inside double-quoted strings since most other
	packages seem to avoid it too.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AC_TYPE_MODE_T): Eeek, this macro makes use of a
	deprecated autoconf macro.  Replace with AC_CHECK_TYPES([mode_t]).

	* src/configdata.cc: Do "typedef int mode_t" if necessary.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Check for mode_t too since we need it for umask().
	You can never know.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AM_INIT_AUTOMAKE): Remove 'dist-bzip2' option
	since we don't distribute bzipped tarballs right now.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Get rid of AC_CANONICAL_{BUILD,HOST,TARGET}.
	These don't seem to be necessary anymore.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4: Use quadrigraphs to output characters like [ ].
	* macros/pcre.m4: Add error checking at the autoconf level.

2002-11-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Set the default response.
	* src/prefdialog.cc: ditto.

2002-11-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (stock_icon_info): It's Gtk::ICON_SIZE_MENU, not
	Gtk::ICON_SIZE_SMALL_TOOLBAR.  This glitch fortunately didn't have